# public-decision-lab

./: .gitignore  AGENTS.md  LICENSE  README.md  data_sources.md  ethics_and_risks.md  method_note.md  priority_model_design.md  project_brief.md  pyproject.toml  roadmap.md
.github/workflows/: cloud-demo.yml  tests.yml
configs/case_studies/: candidate_cases.yml  cn_henan_zhengzhou_flood_2021.yml  pk_sindh_khairpur_flood_2022.yml
configs/priority_models/: baseline_flood.yml
data/: README.md
docs/: adapter_contract.md  case_study_evaluation_plan.md  cloud_automation.md  technical_report_outline.md
docs/case_studies/: README.md  case_template.md
docs/tasks/: adapter_contract.md  bilingual_readme_cloud_demo_and_wechat.md  case_study_evaluation_framework.md  cloud_automation_and_remaining_adapters.md  initialize_repository.md  nasa_lance_local_adapter.md  osm_infrastructure_exposure.md  priority_scoring_framework.md  report_map_showcase.md  worldpop_population_exposure.md
examples/: sample_admin_units.geojson  sample_aoi.geojson  sample_facilities.geojson  sample_flood_extent.geojson  sample_population.tif  sample_roads.geojson
src/disaster_nowcaster/: __init__.py  admin.py  aoi.py  cases.py  cli.py  events.py  exposure.py  geojson_io.py  geometry.py  hazard.py  infrastructure.py  map.py  population.py  report.py  schemas.py  scoring.py
tests/: test_adapters.py  test_cases.py  test_cli.py  test_exposure.py  test_osm_infrastructure.py  test_population.py  test_report.py  test_scoring.py
tests/fixtures/: admin.geojson  aoi.geojson  facilities.geojson  (+2 more)
(+15 files in other folders)
