[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "disaster-impact-nowcaster"
version = "0.1.0"
description = "A lightweight disaster-impact nowcasting and exposure-reporting skeleton."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "TBD" }
authors = [
  { name = "Civic Measurement Lab" }
]
dependencies = [
  "pandas>=2,<3",
  "rasterio>=1.3,<2",
  "shapely>=2,<3",
  "PyYAML>=6,<7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8"
]
test = [
  "pytest>=8"
]

[project.scripts]
disaster-nowcaster = "disaster_nowcaster.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
